Added Login and Signup Functionality

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
 
         .container {
             width: 500px;
-            height: 500px;
+            height: 450px;
             border-radius: 10px;
         }
     </style>
@@ -28,7 +28,7 @@
                 <div class="tab-content" id="myTabContent">
                     <h3 class="register-heading">Sign Up </h3>
 
-                    <form class="d-flex justify-content-center row register-form" action="signup_submit" method="POST">
+                    <form class="d-flex justify-content-center row register-form" action="\signup" method="POST">
                         <div class="col-md-8">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="First Name" value="" name="fname"
@@ -46,11 +46,6 @@
                         </div>
                         <div class="col-md-8">
                             
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Phone No." value="" name="phone"
-                                    tabindex="4" maxlength="10" minlength="10"/>
-                            </div>
-
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="User Name" value="" name="uname"
                                     tabindex="5" />
