--- a/templates/login.html
+++ b/templates/login.html
@@ -36,12 +36,19 @@
     <div class="wrapper">
         <div class="container">
             <div class="d-flex justify-content-center">
-                <div class="container2 register bg-white">
+                <div class="container2 register bg-white" style="height:max-content">
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <div class="alert-danger text-center h6 p-1">
+                            {{ messages[0] }}
+                        </div>
+                    {% endif %}
+                    {% endwith %}                        
                     <div class="d-flex justify-content-center">
                         <div class="tab-content" id="myTabContent">
                             <h3 class="register-heading">Login</h3>
 
-                            <form class="d-flex justify-content-center row register-form" action="login_submit"
+                            <form class="d-flex justify-content-center row register-form" action="\login"
                                 method="POST">
                                 <div class="col-md-8">
                                     <div class="form-group">
