--- a/static/css/common_css.css
+++ b/static/css/common_css.css
@@ -45,21 +45,26 @@ footer input[type=submit]{
 
 .you{
     min-width: 300px;
-    border-radius: 5px;
+    max-width: 500px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px ;
+    border-bottom-right-radius: 20px;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: #ad78d6;
+}
+
+.bot{
+    min-width: 300px;
+    max-width: 500px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     display: inline-block;
     background-color: #9940db;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
-}
-
-.bot{
-    min-width: 300px;
-    border-radius: 5px;
-    display: inline-block;
-    background-color: #ad78d6;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    text-align: right;
 }
