Done with retrieving messages from Tracker

--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,7 @@
                         <div class="tab-content" id="myTabContent">
                             <h3 class="register-heading">Login</h3>
 
-                            <form class="d-flex justify-content-center row register-form" action="\login"
+                            <form class="d-flex justify-content-center row register-form" action="\signin"
                                 method="POST">
                                 <div class="col-md-8">
                                     <div class="form-group">
