--- a/static/css/common_css.css
+++ b/static/css/common_css.css
@@ -1,4 +1,4 @@
-header{
+nav{
     background-color: #401d36;
     color: white;
     position: fixed;
@@ -7,10 +7,14 @@ header{
     width: 100%;
 }
 
-header h3{
-    margin-left: 15px;
-    margin-top: 10px;
-    padding: 2px;
+nav a{
+    color: white;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #401d36;
+    background-color: white;
 }
 
 footer{
@@ -34,18 +38,17 @@ footer input[type=submit]{
 }
 
 .wrapper{
-    margin-top: 55px;
-    margin-left: 15px;
     margin-right: 15px;
-    border-bottom: #bababa 1px solid;
     height: 490px;
     width:1335px;
-    padding: 2px;
+    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .you{
     min-width: 300px;
-    max-width: 500px;
+    max-width: 700px;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px ;
     border-bottom-right-radius: 20px;
@@ -58,12 +61,12 @@ footer input[type=submit]{
 
 .bot{
     min-width: 300px;
-    max-width: 500px;
+    max-width: 700px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
     display: inline-block;
-    background-color: #9940db;
+    background-color: cornflowerblue;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
