--- a/templates/index.html
+++ b/templates/index.html
@@ -7,21 +7,41 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700%7CAllura" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/common_css.css')}}">
+  <script>
+    function scrollDown(){
+    var messageBody = document.querySelector('#messageBody');
+    messageBody.scrollTop = messageBody.scrollHeight - messageBody.clientHeight;
+    }
+  </script>
 </head>
 
-<body style="font-family: Poppins;">
+<body style="font-family: Poppins;" onload="scrollDown()">
   <header>
-    <h3>Helper Bot</h3>
-    <nav class="nav float-right"></nav>
+    <nav class="navbar navbar-expand-lg">
+      <span class="navbar-brand mb-0 h1">Helper Bot</span>
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/signout">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
-  <div class="wrapper container-fluid">
+  <div class="wrapper container-fluid" id="messageBody">
+    {% for i in list%}
+    {% if i['event']=='user' %}
     <div class="row justify-content-start" style="margin-left:0px">
-      <div class="you h5">We act as an mediator between the needy and the donor. We always ensure that every needy gets satisfied. We have helped the sufferers of Kolhapur, Satara and Sangli.</div>
+      <div class="you h5">{{i['text']|safe}}</div>
     </div>
+    {% elif i['event']=='bot' %}
     <div class="row justify-content-end" style="margin-right: 0px;">
-      <div class="bot h5">{{val|safe}}</div>
+      <div class="bot h5">{{i['text']|safe}}</div>
     </div>
+    {% endif %}
+    {% endfor %}
   </div>
 
   <footer>
