--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,8 +8,15 @@
     <style>
         body {
             background-image: url("{{ url_for('static',filename='images/bg-form2.jpg')}}");
-            background-size: cover;
+            background-size: 610px 610px;
+            background-repeat: no-repeat;
+            background-position: 0px;
+            background-color: #fdbc16;
             overflow: hidden;
+            -webkit-border-radius: 50px;
+            -moz-border-radius: 50px;
+            border-radius: 10px;
+            border: none;
         }
 
         .container {
