--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/common_css.css')}}">
 </head>
 
-<body style="font-family: Poppins;">
+<body>
   <header>
     <nav class="navbar navbar-expand-lg">
       <span class="navbar-brand mb-0 h1">Helper Bot</span>
